--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.13.3
   intl: ^0.17.0
   flutter_spinkit: ^5.0.0
+  english_words: ^4.0.0
 
 dev_dependencies:
   flutter_test:
